--- a/src/Homepage/homepage.css
+++ b/src/Homepage/homepage.css
@@ -12,6 +12,13 @@ table {
     width: 100%;
   }
   
+  th{
+    background-color: rgb(167, 6, 6);
+    color: aliceblue;
+  }
+  th:nth-last-child(){
+    width:"20vw"
+  }
   td, th {
     border: 1px solid #dddddd;
     text-align: left;
